--- a/src/main/resources/com/company/hr_crm/messages_en.properties
+++ b/src/main/resources/com/company/hr_crm/messages_en.properties
@@ -32,7 +32,7 @@ com.company.hr_crm.entity/User.email=Email
 com.company.hr_crm.entity/User.firstName=First name
 com.company.hr_crm.entity/User.id=ID
 com.company.hr_crm.entity/User.lastName=Last name
-com.company.hr_crm.entity/User.password=Password
+com.company.hr_crm.entity/User.password=User password
 com.company.hr_crm.entity/User.position=Position
 com.company.hr_crm.entity/User.timeZoneId=Time zone
 com.company.hr_crm.entity/User.username=Username
@@ -101,11 +101,11 @@ com.company.hr_crm.screen.requirement/requirementBrowse.caption=Requirements
 com.company.hr_crm.screen.requirement/requirementBrowse.menu=Requirements
 com.company.hr_crm.screen.requirement/requirementEdit.caption=Requirement editor
 
-com.company.hr_crm.screen.user/UserBrowse.caption=Users
-com.company.hr_crm.screen.user/UserEdit.caption=User editor
-com.company.hr_crm.screen.user/additional=Additional
 com.company.hr_crm.screen.user/confirmPassword=Confirm password
 com.company.hr_crm.screen.user/passwordsDoNotMatch=Passwords do not match
+com.company.hr_crm.screen.user/userBrowse.caption=Users
+com.company.hr_crm.screen.user/userBrowse.menu=Users
+com.company.hr_crm.screen.user/userEdit.caption=User editor
 
 com.company.hr_crm.screen.vacancy/vacancyBrowse.caption=Vacancies
 com.company.hr_crm.screen.vacancy/vacancyBrowse.menu=Vacancies
