--- a/src/main/resources/com/company/hr_crm/messages_en.properties
+++ b/src/main/resources/com/company/hr_crm/messages_en.properties
@@ -17,6 +17,7 @@ com.company.hr_crm.entity/Candidate.lastName=Last name
 com.company.hr_crm.entity/Candidate.phoneNumber=Phone number
 com.company.hr_crm.entity/Candidate.request=Request
 com.company.hr_crm.entity/Candidate.skills=Skills
+com.company.hr_crm.entity/Candidate.suitableVacancy=Suitable vacancy
 com.company.hr_crm.entity/Candidate.yearsOfExperience=Years of experience
 com.company.hr_crm.entity/Department=Department
 com.company.hr_crm.entity/Department.HR=Hr
@@ -38,6 +39,7 @@ com.company.hr_crm.entity/User.timeZoneId=Time zone
 com.company.hr_crm.entity/User.username=Username
 com.company.hr_crm.entity/User.version=Version
 com.company.hr_crm.entity/Vacancy=Vacancy
+com.company.hr_crm.entity/Vacancy.candidates=Candidates
 com.company.hr_crm.entity/Vacancy.createdBy=Created by
 com.company.hr_crm.entity/Vacancy.createdDate=Created date
 com.company.hr_crm.entity/Vacancy.deletedBy=Deleted by
