--- a/src/main/resources/com/company/hr_crm/messages_ru.properties
+++ b/src/main/resources/com/company/hr_crm/messages_ru.properties
@@ -1,6 +1,6 @@
-localeDisplayName.ru=Russian
+localeDisplayName.ru=Русский
 
-databaseUniqueConstraintViolation.IDX_HRCRM_USER_ON_USERNAME=A user with the same username already exists
+databaseUniqueConstraintViolation.IDX_HRCRM_USER_ON_USERNAME=Пользователь с таким именем уже существует
 
 com.company.hr_crm.entity/Candidate=Кандидат
 com.company.hr_crm.entity/Candidate.createdBy=Создатель
@@ -16,7 +16,8 @@ com.company.hr_crm.entity/Candidate.lastModifiedDate=Дата последнег
 com.company.hr_crm.entity/Candidate.lastName=Фамилия
 com.company.hr_crm.entity/Candidate.phoneNumber=Телефон
 com.company.hr_crm.entity/Candidate.request=Запрос
-com.company.hr_crm.entity/Candidate.skills=Skills
+com.company.hr_crm.entity/Candidate.skills=Навыки
+com.company.hr_crm.entity/Candidate.suitableVacancy=Подходящие вакансии
 com.company.hr_crm.entity/Candidate.yearsOfExperience=Трудовой стаж
 com.company.hr_crm.entity/Department=Департамент
 com.company.hr_crm.entity/Department.HR=Hr
@@ -38,6 +39,7 @@ com.company.hr_crm.entity/User.timeZoneId=Часовой пояс
 com.company.hr_crm.entity/User.username=Логин
 com.company.hr_crm.entity/User.version=Версия
 com.company.hr_crm.entity/Vacancy=Вакансия
+com.company.hr_crm.entity/Vacancy.candidates=Candidates
 com.company.hr_crm.entity/Vacancy.createdBy=Создатель
 com.company.hr_crm.entity/Vacancy.createdDate=Дата создания
 com.company.hr_crm.entity/Vacancy.deletedBy=Удалил
@@ -51,7 +53,7 @@ com.company.hr_crm.entity/Vacancy.request=Request
 com.company.hr_crm.entity/Vacancy.requirements=Требования
 com.company.hr_crm.entity/Vacancy.yearsOfExperience=Трудовой стаж
 com.company.hr_crm.entity/Request=Запрос
-com.company.hr_crm.entity/Request.candidates=Кандидаты
+com.company.hr_crm.entity/Request.candidates=Candidates
 com.company.hr_crm.entity/Request.createdBy=Создатель
 com.company.hr_crm.entity/Request.createdDate=Дата создания
 com.company.hr_crm.entity/Request.deletedBy=Удалил
@@ -59,9 +61,9 @@ com.company.hr_crm.entity/Request.deletedDate=Дата удаления
 com.company.hr_crm.entity/Request.id=Id
 com.company.hr_crm.entity/Request.lastModifiedBy=Последнее изменение
 com.company.hr_crm.entity/Request.lastModifiedDate=Дата последнего изменения
-com.company.hr_crm.entity/Request.vacancy=Vacancy
+com.company.hr_crm.entity/Request.vacancy=Вакансия
 com.company.hr_crm.entity/Requirement=Требования
-com.company.hr_crm.entity/Requirement.candidate=Candidate
+com.company.hr_crm.entity/Requirement.candidate=Кандидат
 com.company.hr_crm.entity/Requirement.createdBy=Создатель
 com.company.hr_crm.entity/Requirement.createdDate=Дата создания
 com.company.hr_crm.entity/Requirement.deletedBy=Удалил
@@ -71,7 +73,7 @@ com.company.hr_crm.entity/Requirement.id=Id
 com.company.hr_crm.entity/Requirement.lastModifiedBy=Последнее изменение
 com.company.hr_crm.entity/Requirement.lastModifiedDate=Дата последнего изменения
 com.company.hr_crm.entity/Requirement.name=Название
-com.company.hr_crm.entity/Requirement.vacancies=Vacancies
+com.company.hr_crm.entity/Requirement.vacancies=Вакансии
 
 com.company.hr_crm.screen.candidate/candidateBrowse.caption=Кандидаты
 com.company.hr_crm.screen.candidate/candidateBrowse.menu=Кандидаты
@@ -85,7 +87,7 @@ com.company.hr_crm.screen.login/loginFailed = Авторизация не вып
 com.company.hr_crm.screen.login/loginScreen.rememberMe=Запомнить меня
 com.company.hr_crm.screen.login/passwordPlaceholder = Пароль
 com.company.hr_crm.screen.login/usernamePlaceholder = Логин
-com.company.hr_crm.screen.login/welcomeLabel = Добро пожаловать в HR CRM
+com.company.hr_crm.screen.login/welcomeLabel = HR CRM
 
 com.company.hr_crm.screen.main/application.caption = HR CRM
 com.company.hr_crm.screen.main/application.logoLabel = HR CRM
