Added unique constraint for administrator role.

--- a/src/main/resources/com/company/hr_crm/messages_en.properties
+++ b/src/main/resources/com/company/hr_crm/messages_en.properties
@@ -105,6 +105,7 @@ com.company.hr_crm.screen.requirement/requirementEdit.caption=Requirement editor
 
 com.company.hr_crm.screen.user/confirmPassword=Confirm password
 com.company.hr_crm.screen.user/passwordsDoNotMatch=Passwords do not match
+com.company.hr_crm.screen.user/userWithAdministratorRoleAlreadyExist=User with Administrator role already exist
 com.company.hr_crm.screen.user/userBrowse.caption=Users
 com.company.hr_crm.screen.user/userBrowse.menu=Users
 com.company.hr_crm.screen.user/userEdit.caption=User editor
